# CMakeDemo

./: .gitignore  CMakeLists.txt  ConsoleApplication1.sln  README.md  build.bat  build.ps1  build.sh
ConsoleApp1/: CMakeLists.txt  ConsoleApp1.csproj  Program.cs
ConsoleApp1/Properties/: AssemblyInfo.cs
ConsoleApplication1/: CMakeLists.txt  ConsoleApplication1.html  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters
ConsoleApplication1/inc/: BindTest.h  WasmTest.h
ConsoleApplication1/src/: Main.cpp
TestLib/: CMakeLists.txt  TestLib.vcxproj  TestLib.vcxproj.filters
TestLib/inc/TestLib/: Asset.h  BaseEntity.h  Document.h  Generator.h  Property.h  RelProperty.h  Serde.h
TestLib/src/: Asset.cpp  BaseEntity.cpp  Document.cpp  Generator.cpp  Property.cpp  RelProperty.cpp  Serde.cpp
TestLibNet/: CMakeLists.txt  TestLibNet.vcxproj  TestLibNet.vcxproj.filters  app.rc
TestLibNet/inc/: TestLibNet.h
TestLibNet/src/: AssemblyInfo.cpp  TestLibNet.cpp
